Fixed issue #11 Immigration Block Quote title box alignment

--- a/sass/pages.scss
+++ b/sass/pages.scss
@@ -792,6 +792,13 @@ span.field-label { /* The inline field label used by the Fences module */
 }//gateway-items
 
 
+#main {
+  blockquote{
+    margin-top: 40px;
+  }
+}
+
+
 /* 
 * Spot color changes for different pages
 */
